--- a/.github/workfile/fetchCourseList.yaml
+++ b/.github/workfile/fetchCourseList.yaml
@@ -54,6 +54,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.DEPLOY_TOKEN }}
           publish_dir: dist
           keep_files: true
