refactor: modularize crawler functions and enhance GitHub Actions for semester-specific crawling

--- a/.github/workflows/fetchCourseList.yaml
+++ b/.github/workflows/fetchCourseList.yaml
@@ -8,8 +8,76 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  run-selenium:
+  get-semesters:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install selenium webdriver-manager
+
+      - name: Install Chrome and ChromeDriver
+        run: |
+          sudo apt update
+          sudo apt install -y google-chrome-stable
+          CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d'.' -f1)
+          sudo apt install -y chromium-chromedriver
+          echo "Chrome version: $CHROME_VERSION"
+
+      - name: Get Semesters
+        id: set-matrix
+        run: |
+          python -c "
+          from selenium import webdriver
+          from selenium.webdriver.common.by import By
+          from selenium.webdriver.support.ui import Select
+          from selenium.webdriver.support.ui import WebDriverWait
+          from selenium.webdriver.support import expected_conditions as EC
+          from webdriver_manager.chrome import ChromeDriverManager
+          from selenium.webdriver.chrome.service import Service
+          import json
+          
+          options = webdriver.ChromeOptions()
+          options.add_argument('--headless')
+          options.add_argument('--no-sandbox')
+          options.add_argument('--disable-dev-shm-usage')
+          options.add_argument('--disable-gpu')
+          
+          driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)
+          driver.get('https://sys.ndhu.edu.tw/aa/class/course/Default.aspx')
+          
+          WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.NAME, 'ddlCOLLEGE')))
+          
+          semester_select = Select(driver.find_element(By.NAME, 'ddlYEAR'))
+          semesters = [option.get_attribute('value').strip().replace('/', '-') for option in semester_select.options]
+          
+          # 過濾掉不需要的學期
+          semesters = [s for s in semesters if s.split('-')[0] >= '105' and s.split('-')[-1] <= '2']
+          
+          driver.quit()
+          
+          matrix = json.dumps({'semester': semesters})
+          print(f'matrix={matrix}')
+          " >> $GITHUB_OUTPUT
+
+  crawl-semester:
+    needs: get-semesters
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        semester: ${{ fromJson(needs.get-semesters.outputs.matrix).semester }}
+      fail-fast: false
 
     steps:
       - name: Checkout Repository
@@ -33,33 +101,46 @@ jobs:
           sudo apt install -y chromium-chromedriver
           echo "Chrome version: $CHROME_VERSION"
 
-      - name: Test Connectivity
-        run: curl -I https://sys.ndhu.edu.tw/aa/class/course/Default.aspx
+      - name: Run Selenium Crawler for Semester
+        run: python crawler.py --semester ${{ matrix.semester }}
 
+      - name: Upload Semester Data
+        uses: actions/upload-artifact@v3
+        with:
+          name: semester-${{ matrix.semester }}
+          path: |
+            ${{ matrix.semester }}/
+            semester.json
 
-      - name: Run Selenium Crawler
-        run: python crawler.py
+  merge-results:
+    needs: crawl-semester
+    runs-on: ubuntu-latest
+    if: always()
 
-      # - name: Upload main.json and course data
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: crawled-data
-      #     path: |
-      #       main.json
-      #       course/
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Download All Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
 
       - name: Prepare GitHub Pages Deployment
         run: |
-          mkdir -p dist  # 建立 GitHub Pages 部署目錄
-          cp semester.json dist/  # 複製學期列表
-          for semester in [0-9][0-9]-[0-9]* [0-9][0-9][0-9]-[0-9]*; do
-            if [ -d "$semester" ]; then
-              mkdir -p "dist/$semester"
-              cp "$semester/main.json" "dist/$semester/"
-              cp -r "$semester/course" "dist/$semester/"
+          mkdir -p dist
+          cp artifacts/semester.json dist/ || true
+          
+          # 移動所有學期資料到 dist 目錄
+          for semester_dir in artifacts/*/; do
+            if [ -d "$semester_dir" ]; then
+              semester_name=$(basename "$semester_dir")
+              mkdir -p "dist/$semester_name"
+              cp -r "$semester_dir"/* "dist/$semester_name/"
             fi
           done
-          echo "<h1>NDHU Course Data</h1>" > dist/index.html  # 建立首頁
+          
+          echo "<h1>NDHU Course Data</h1>" > dist/index.html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
