--- a/.github/workflows/fetchCourseList.yaml
+++ b/.github/workflows/fetchCourseList.yaml
@@ -107,7 +107,7 @@ jobs:
       - name: Upload Semester Data
         uses: actions/upload-artifact@v4
         with:
-          name: semester-${{ matrix.semester }}
+          name: ${{ matrix.semester }}
           path: |
             ${{ matrix.semester }}/
             semester.json
